# Docusense

./: .gitignore  .impeccable.md  README.md  main.py  pyproject.toml
backend/: extractor.py  gradcam.py  main.py
data/labels/: test.txt  train.txt  val.txt
eval_output/: metrics.json
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ConfidenceBar.tsx  DropZone.tsx  FieldsTable.tsx  HeatmapOverlay.tsx  ResultPanel.tsx
model_output/: training_log.json
pipeline/: pipeline.py  preprocess.py
scripts/: delete_endpoint.py  deploy_endpoint.py  download_dataset.py  generate_labels.py  register_model.py  run_evaluate.py
training/: dataset.py  evaluate.py  train.py
