[project]
name = "docusense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.91.0",
    "datasets>=4.8.4",
    "fastapi>=0.135.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pillow>=12.1.1",
    "python-multipart>=0.0.24",
    "pytz>=2026.1.post1",
    "sagemaker==2.257.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.44.0",
]
